# niri

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  niri.spec.rpkg
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
docs/: mkdocs.yaml
docs/hooks/: shortcodes.py
docs/wiki/: Configuration:-Debug-Options.md  Configuration:-Include.md  Configuration:-Input.md  Configuration:-Introduction.md  Configuration:-Key-Bindings.md  Configuration:-Layer-Rules.md  Configuration:-Miscellaneous.md  Configuration:-Window-Rules.md  Development:-Design-Principles.md  Development:-Documenting-niri.md  Development:-Releasing-niri.md  FAQ.md  Fullscreen-and-Maximize.md  Getting-Started.md  IPC.md  Integrating-niri.md  Packaging-niri.md  README.md  Window-Effects.md  Xwayland.md  _Sidebar.md
niri-config/: Cargo.toml
niri-config/src/: binds.rs  lib.rs
niri-ipc/: README.md
niri-ipc/src/: lib.rs
resources/: default-config.kdl
src/: a11y.rs  main.rs  niri.rs
src/backend/: tty.rs  winit.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs
src/input/: mod.rs
src/ipc/: server.rs
src/render_helpers/: clipped_surface.rs
src/screencasting/: mod.rs
src/tests/: mod.rs  remove_output.rs
src/ui/: hotkey_overlay.rs
src/utils/: spawning.rs  watcher.rs
