[package]
name = "niri-config"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
# 0.8.2 is incompatible with our MSRV 1.85.0
csscolorparser = "=0.8.1"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }
niri-ipc = { version = "25.11.0", path = "../niri-ipc" }
regex = "1.12.3"
smithay = { workspace = true, features = ["backend_libinput"] }
tracing.workspace = true
tracy-client.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions = "1.4.1"
diff = "0.1.13"
